# dw3000-ng

./: .gitignore  .gitlab-ci.yml  .rustfmt.toml  Cargo.toml  Embed.toml  LICENSE  README.md  memory.x  openocd.gdb
.cargo/: config.save  config.toml
.github/workflows/: ci.yml  rust.yml
example_raspberry/: Cargo.toml
example_raspberry/.cargo/: config.toml
example_stm32f1/: Cargo.toml  memory.x  test.csv
example_stm32f1/.cargo/: config.toml
example_stm32f1/src/: lib.rs
example_stm32f1/tests/: integration.rs
examples/: anchor.rs  ds_rtt_anchor.rs  ds_rtt_tag.rs  example.rs  init_tracing.rs  simple_rtt_anchor.rs  simple_rtt_tag.rs  stateTest.rs  state_test.rs  tag.rs
raspberry/: Cargo.toml
src/: configs.rs  fast_command.rs  hl.rs  hl2.rs  lib.rs  ll.rs  ranging.rs  time.rs
src/hl/: awake.rs  carrier_freq_offset.rs  error.rs  mod.rs  ready.rs  receiving.rs  sending.rs  sleeping.rs  state_impls.rs  uninitialized.rs
stm32f1/: Cargo.toml
stm32f1/.cargo/: config.toml
stm32f1/tests/: integration.rs
