[package]
name = "dw3000-ng"
description = "A modernized driver for DW3000 Ultra Wide Band module"
version = "0.3.0"
authors = [
    "Clement Pene <clement.pene@sii.fr>",
    "Romain Saboret <romain.saboret@sii.fr>",
    "BERTON Thomas <thomas.berton@sii.fr>",
    "RAIMBAULT Thomas <thomas.raimbault@sii.fr>",
    "Fan Jiang <i@fanjiang.me>",
]
edition = "2021"
license = "0BSD"

[dependencies]
byte = "0.2"
embedded-hal = { version = "0.2" }
smoltcp = { version = "0.10", default-features = false, features = [
    "socket-raw",
    "defmt",
    "medium-ieee802154",
] }
nb = "1.0"
fixed = "1.7"
defmt = "0.3"

[dependencies.serde]
version = "1"
default-features = false
features = ["derive"]

[dependencies.ssmarshal]
version = "1"
default-features = false

[dependencies.num_enum]
version = "0.5"
default-features = false

[features]
default = ["async"]
std = ["ssmarshal/std", "serde/std", "num_enum/std"]
async = []
defmt = []

[workspace]
members = ["example_stm32f1"]

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
# NOTE disabled to work around issue rust-lang/rust#90357
# the bug results in log messages not having location information
# (the line printed below the log message that contains the file-line location)
# lto = 'fat'
opt-level = 3           # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
# see comment in the profile.release section
lto = false
opt-level = 3           # <-
overflow-checks = false # <-
