[package]
name = "dw3000-ng"
description = "A modernized driver for DW3000 Ultra Wide Band module"
version = "0.6.1"
authors = [
    "Fan Jiang <i@fanjiang.me>",
    "Clement Pene <clement.pene@sii.fr>",
    "Romain Saboret <romain.saboret@sii.fr>",
    "BERTON Thomas <thomas.berton@sii.fr>",
    "RAIMBAULT Thomas <thomas.raimbault@sii.fr>",
]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/ProfFan/dw3000-ng"

[dependencies]
byte = "0.2"
embedded-hal = "1.0"
smoltcp = { version = "0.11", default-features = false, features = [
    "socket-raw",
    "defmt",
    "medium-ieee802154",
] }
nb = "1.0"
fixed = "1.7"
defmt = "0.3"
num-traits = { version = "0.2.18", default-features = false, features = ["libm"], optional = true }

[dev-dependencies]
embedded-hal-mock = "0.10"

[dependencies.serde]
version = "1"
default-features = false
features = ["derive"]

[dependencies.num_enum]
version = "0.7"
default-features = false

[features]
default = ["async", "defmt", "num-traits"]
std = ["serde/std", "num_enum/std"]
async = []
defmt = []
num-traits = ["dep:num-traits"]
