[package]
name = "dw3000-ng"
description = "A modernized driver for DW3000 Ultra Wide Band module"
version = "1.0.2"
authors = [
    "Fan Jiang <i@fanjiang.me>",
    "Clement Pene <clement.pene@sii.fr>",
    "Romain Saboret <romain.saboret@sii.fr>",
    "BERTON Thomas <thomas.berton@sii.fr>",
    "RAIMBAULT Thomas <thomas.raimbault@sii.fr>",
]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/ProfFan/dw3000-ng"

[dependencies]
byte = "0.2"
embedded-hal = "1.0"
embedded-hal-async = "1.0"
smoltcp = { version = ">=0.11", default-features = false, features = [
    "socket-raw",
    "medium-ieee802154",
] }
nb = "1.0"
fixed = "1.7"
defmt = { version = "0.3", optional = true }
num-traits = { version = "0.2", default-features = false, features = [
    "libm",
], optional = true }
maybe-async = "0.2"

[dev-dependencies]
embedded-hal-mock = { version = "0.10", features = ["embedded-hal-async"] }
embedded-hal-bus = { version = "0.2", features = ["async"] }
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }

[dependencies.serde]
version = "1"
default-features = false
features = ["derive"]

[dependencies.num_enum]
version = "0.7"
default-features = false

[features]
default = ["async", "rssi"]
std = ["serde/std", "num_enum/std"]
async = []
defmt = ["dep:defmt", "smoltcp/defmt"]
rssi = ["dep:num-traits"]
