[package]
name = "example_raspberry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = {version = "0.13.1", features = ["hal"]}
dw3000 = {path = "../"}
nb           = "1.0.0"
embedded-timeout-macros = "0.3.0"
embedded-hal = "0.2.4"
