# cargo-features = ["per-package-target"]

[package]
# TODO(1) fix `authors` and `name` if you didn't use `cargo-generate`
authors = ["clement.pene <clement.pene@sii.fr>"]
name = "example_stm32f1"
edition = "2021"
version = "0.2.0"
# forced-target = "thumbv7m-none-eabi"

[lib]
harness = false

# needed for each integration test
[[test]]
name = "integration"
harness = false

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
defmt = "0.3.0"
defmt-rtt = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
# TODO(4) enter your HAL here
stm32f1xx-hal = { version = "0.8.0", features = ["stm32f103", "rt", "medium"] }
dw3000-ng = { name = "dw3000", path = "../"}
nb           = "1.0.0"
embedded-timeout-macros = "0.3.0"
embedded-hal = "0.2.4"



[dev-dependencies]
defmt-test = "0.3.0"

# uncomment this to switch from the crates.io version of defmt to its git version
# check app-template's README for instructions
# [patch.crates-io]
# defmt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-rtt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-test = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# panic-probe = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }